--- a/Maui/SimpleWeather.Maui/Main/WeatherRadarPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherRadarPage.xaml
@@ -3,19 +3,20 @@
     x:Class="SimpleWeather.Maui.Main.WeatherRadarPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
+    xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     Title="{x:Static res_strings:Resources.label_radar}"
     BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground},
                                       Dark={StaticResource DarkBackground}}"
     Shell.NavBarIsVisible="True">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="{x:Static res_strings:Resources.action_refresh}"
-                     Clicked="RefreshBtn_Clicked">
+        <ToolbarItem Clicked="RefreshBtn_Clicked" Text="{x:Static res_strings:Resources.action_refresh}">
             <ToolbarItem.IconImageSource>
-                <matIcons:MaterialIcon Symbol="Refresh" Size="24"
-                                       Color="{AppThemeBinding Light={StaticResource LightOnSurface},
-                                                               Dark={StaticResource DarkOnSurface}}" />
+                <matIcons:MaterialIcon
+                    Size="24"
+                    Symbol="Refresh"
+                    Color="{AppThemeBinding Light={StaticResource LightOnSurface},
+                                            Dark={StaticResource DarkOnSurface}}" />
             </ToolbarItem.IconImageSource>
         </ToolbarItem>
     </ContentPage.ToolbarItems>
